--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,11 @@
 body {
     font-family: 'Lato', sans-serif;
+    
 }
-
+.main{
+    max-width: 1140px;
+    margin: o auto;
+}
 .btn-primary{
     background: #E55473;
     border-radius: 5px;
@@ -47,3 +51,61 @@ body {
     line-height: 30px;
     padding: 9px 160px 0px 240px;
 }
+.features{
+    padding: 130px;
+    color: #FFFFFF;
+    background: #FFFFFF;
+    margin: 130px 0;
+
+}
+.features-title{
+    color: #272727;
+    text-align: center;
+    font-family: Lato;
+    font-size: 40px;
+    font-weight: 800;
+}
+.features-description{
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-family: Lato;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+}
+.arch{
+    display: flex;
+    border-radius: 1208px 1216px 3121px 240px;
+    
+}
+.arch1{
+    width: 364px;
+    height: 438px;
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(167, 33, 98, 0.15);
+    flex-shrink: 0;
+    margin-right: 20px;
+    margin-left: auto;
+    display: inline-flex;
+}
+.arch2{
+    width: 364px;
+    height: 438px;
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(5, 151, 160, 0.15);
+    flex-shrink: 0;
+    margin-right: 20px;
+    display: inline-flex;
+}
+.arch3{
+    width: 364px;
+    height: 438px;
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(71, 125, 17, 0.15);
+    flex-shrink: 0;
+    margin-right: auto;
+    display: inline-flex;
+}
+  
+  
+  
